# turingosv4

./: .aider.conf.yml  .cursorrules  .gitattributes  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  CONVENTIONS.md  Cargo.toml  GEMINI.md  HARNESS.md  HARNESS_MANUAL.md  HARNESS_PLAYBOOK.md  K-0.1-FORENSICS.md  OBLIGATIONS.md  QUICKSTART.md  README.md  WARP.md  build.rs  constitution.md  genesis_payload.toml  h_vppu_history.json
.claude/: settings.json
.github/: copilot-instructions.md
cases/: C-001_post_genesis_minting.yaml  C-002_redistribute_pool_rebirth.yaml  C-003_oracle_midstep_blocking.yaml  C-004_kernel_domain_leak.yaml  C-005_greedy_router.yaml  C-006_falsifier_perverse_incentive.yaml  C-007_tls_deadlock.yaml  C-008_proxy_502.yaml  C-009_format_fragility.yaml  C-010_generator_equals_evaluator.yaml  C-011_brute_force_formalization.yaml  C-044_meta_architecture_not_implemented.yaml  C-045_gardener_agent_missing.yaml  C-046_constitution_not_readonly.yaml  C-048_oneshot_bypasses_mandatory_wtool.yaml  C-049_snapshot_empty_balances.yaml  C-050_c011_partial_enforcement.yaml  C-053_reputation_counter_missing.yaml  C-055_typical_error_threshold.yaml  C-061_q_halt_state_machine.yaml  C-067_oracle_receipt_capability.yaml  MANIFEST.sha256  SCHEMA.md
design-system/: README.md  SKILL.md  colors_and_type.css
docs/: economics.md  experiments.md
experiments/minif2f_v4/: Cargo.toml  h_vppu_history.json  history.py  metrics.yaml  monitor.sh  run_batch.sh  run_broad.sh  run_list.sh  run_subset.sh
experiments/minif2f_v4/analysis/: PHASE7_DAG_ANALYSIS.md  audit_proof.py  frozen_analysis.py  phase2_ab_analyze.py  phase9_aggregate.py  run_interleaved.sh  sample.py  sample_N20_S31415.txt  sample_N20_S74677.txt  sample_N50_S74677.txt
experiments/minif2f_v4/examples/: fc_trace_emit_one.rs
experiments/minif2f_v4/logs/: frozen_analysis_20260415T013559.txt  v31_20260415T013559.err  v31_n1_20260415T013559.jsonl  v31_n3_20260415T013559.jsonl  v31_oneshot_20260415T013559.jsonl
experiments/minif2f_v4/src/: agent_models.rs  batch_orchestrator.rs  budget_regime.rs  chain_runtime.rs  chaintape_mode_gate.rs  cost_aggregator.rs  drive_task.rs  experiment_mode.rs  fc_trace.rs  h_vppu_history.rs  jsonl_schema.rs  lean4_oracle.rs  lib.rs  per_call_budget.rs  post_hoc_verifier.rs  rollback_sim.rs  run_id.rs  wall_clock.rs
experiments/minif2f_v4/tests/: architect_sole_lt_reader.rs  artifact_content_predicates.rs  artifact_lookup_evasion.rs  auditor_sees_candidate_only.rs  constitution_g1_2_subprocess_resume.rs  fc_alignment_conformance.rs  fc_trace_smoke.rs  heldout_operational_sealing.rs  llm_proxy_python_conformance.rs  mode_flag_binary_purity.rs  pput_anti_goodhart.rs  pput_result_report_standard.rs  tb_16_comprehensive_arena_smoke.rs  tb_18_per_llm_call_budget.rs  trust_root_immutability.rs
frontend/: package-lock.json  package.json
handover/: SWEBENCH_MARKET_ACTIVATION_BENCHMARK_v4_2026-05-29.md  SWEBENCH_V4_COMPARATIVE_BENCHMARK_DESIGN_2026-05-29.md  bible.md
research/envelope_poc/: Cargo.toml
research/envelope_poc/src/: envelope.rs  lib.rs
research/envelope_poc/tests/: decoupling.rs  fc1_invariant.rs  privacy_fence.rs  robustness.rs
rules/: MANIFEST.sha256  engine.py
scripts/: _smoke_siliconflow.py  analyze_emerge_stage1.py  analyze_emerge_stage2.py  analyze_p1_realvalue.py  analyze_t2_routing_efficiency.py  analyze_t2_sweep.py  audit_legacy_bypass.sh  bench_aggregate.py  bench_axiom_reverify.py  check_trace_matrix.py  constitution_gates.manifest.toml  constitutional_check.sh  dispatch_subagent.sh  fc_witness_extract.py  install_hooks.sh  obl001_deepseek_chrome_e2e.mjs  package_true_suite_evidence.sh  probe_bare_v4_swebench.py  probe_swebench_expand.sh  probe_swebench_goldsmoke.sh  probe_swebench_loop.sh  regenerate_post_fix_evidence.sh  restore_true_suite_chain_evidence.sh  run_constitution_gates.sh  run_g_phase_batch.sh  run_p1_realvalue.sh  run_real12_task_market_probe.sh  run_real13_market_pressure_probe.sh  (+25 more)
(+7569 files in other folders)
