[package]
name = "turingosv4"
version = "0.1.0"
edition = "2021"
description = "Silicon-Native Microkernel for LLM Formal Verification Swarm"

[dependencies]
libc = "0.2"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "process", "io-util", "sync"] }

[dev-dependencies]
tokio-test = "0.4"

[workspace]
members = [".", "experiments/minif2f_v4"]
