[package]
name = "minif2f_v4"
version = "0.1.0"
edition = "2021"
description = "MiniF2F v4 — Formal verification swarm experiment"

[[bin]]
name = "evaluator"
path = "src/bin/evaluator.rs"

[[bin]]
name = "lean_market"
path = "src/bin/lean_market.rs"

[[bin]]
name = "batch_evaluator"
path = "src/bin/batch_evaluator.rs"

[dependencies]
turingosv4 = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
