[package]
name = "minif2f_v4"
version = "0.1.0"
edition = "2021"
description = "MiniF2F v4 — partial restoration (lean_market binary only, R0)"

[[bin]]
name = "lean_market"
path = "src/bin/lean_market.rs"
test = false

[dependencies]
turingosv4 = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
